# _data_quality_AI

./: .env  anomaly.py  build_baseline.py  config.py  db.py  decision_graph.py  dq_ai.db  inspect_db.py  llm_chain.py  main.py  metric_engine.py  metrics.sql  monitor_day.py  pyproject.toml  requirements.txt  sample_data.sql  trust.py
metrics/: approval_rate.sql  avg_claim_amount.sql  avg_processing_time.sql  daily_claim_amount.sql
